[profile.release]
panic = "unwind"

[workspace]
members = [
	"node",
	"parachain-node",
	"tuxedo-template-runtime",
	"tuxedo-core",
	"tuxedo-core/aggregator",
	"tuxedo-core/no_bound",
	"tuxedo-parachain-core/register_validate_block",
	"tuxedo-parachain-core",
	"wallet",
	"wardrobe/amoeba",
	"wardrobe/money",
	"wardrobe/parachain",
	"wardrobe/poe",
	"wardrobe/timestamp",
	"wardrobe/kitties",
	"wardrobe/runtime_upgrade",
]
resolver = "2"

[workspace.dependencies]
# Generic dependencies
async-io = "2.0"
async-trait = "0.1.73"
clap = "4.3.0"
hex-literal = "0.4.1"
jsonrpsee = "0.16.2"
log = "0.4"
parity-scale-codec = { version = "3.4.0", default-features = false }
parity-util-mem = "0.12.0"
scale-info = { version = "2.1.1", default-features = false }
serde = { version = "1.0.188", default-features = false }

# Procedural macro dependencies
proc-macro2 = "1.0.67"
quote = "1.0.23"
syn = "2.0.15"

# Core-only dependencies
array-bytes = "6.0.0"

# Wallet-only dependencies
anyhow = "1.0.69"
directories = "5.0.0"
env_logger = "0.10.0"
futures = "0.3"
hex = "0.4.3"
serde_json = "1.0"
sled = "0.34.7"
tokio = "1.25.0"

# Node-only dependencies
substrate-build-script-utils = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }

# Runtime-only dependencies
substrate-wasm-builder = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }

# Substrate primitives and client
sc-basic-authorship = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-chain-spec = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-cli = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-client-api = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-consensus = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-consensus-aura = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-consensus-grandpa = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-consensus-manual-seal = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-executor = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-keystore = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-network = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-network-sync = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-rpc = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-rpc-api = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-service = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-sysinfo = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-telemetry = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-tracing = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-transaction-pool = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sc-transaction-pool-api = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-api = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-application-crypto = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-block-builder = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-blockchain = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-consensus = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-consensus-aura = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-consensus-grandpa = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-core = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-debug-derive = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-inherents = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-io = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-keyring = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-keystore = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-runtime = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-session = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-std = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-storage = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-timestamp = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-transaction-pool = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-version = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }

# x
substrate-prometheus-endpoint = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }

# Polkadot
color-print = "0.3.4"
# xcm = { package = "staging-xcm", path = "../../../polkadot/xcm", default-features = false}

# Cumulus
cumulus-client-cli = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-client-collator = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-client-consensus-aura = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-client-consensus-common = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-client-consensus-proposer = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-client-service = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-primitives-core = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-primitives-parachain-inherent = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-relay-chain-interface = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-test-client = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
cumulus-test-relay-sproof-builder = { branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
polkadot-cli = { default-features = false, branch = "tuxedo-no-rocks", git = "https://github.com/off-narrative-labs/polkadot-sdk" }
polkadot-parachain-primitives = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
polkadot-primitives = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }

# Added while adding Polkadot / Cumulus support
sp-externalities = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-state-machine = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-tracing = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
sp-trie = { branch = "tuxedo-no-rocks", default_features = false, git = "https://github.com/off-narrative-labs/polkadot-sdk" }
trie-db = { version = "0.28.0", default-features = false }
