[profile.release]
panic = "unwind"

[workspace]
members = [
	"node",
	"parachain-node",
	"tuxedo-template-runtime",
	"tuxedo-core",
	"tuxedo-core/aggregator",
	"tuxedo-core/no_bound",
	"tuxedo-parachain-core/parachainify",
	"tuxedo-parachain-core",
	"tuxedo-parachain-runtime",
	"wallet",
	"wardrobe/amoeba",
	"wardrobe/kahoot",
	"wardrobe/money",
	"wardrobe/parachain",
	"wardrobe/poe",
	"wardrobe/timestamp",
	"wardrobe/kitties",
	"wardrobe/runtime_upgrade",
]
resolver = "2"

[workspace.dependencies]
# Generic dependencies
async-io = "2.0"
async-trait = "0.1.73"
clap = "4.4"
color-print = "0.3.5"
convert_case = "0.6.0"
hex-literal = "0.4.1"
jsonrpsee = "0.22"
log = "0.4"
parity-scale-codec = { version = "3.6", default-features = false }
parity-util-mem = "0.12.0"
scale-info = { version = "2.10", default-features = false }
serde = { version = "1.0.188", default-features = false }
serde_json = { version = "1.0", default-features = false }

# Procedural macro dependencies
proc-macro2 = "1.0.67"
quote = "1.0.23"
syn = "2.0.15"

# Core-only dependencies
array-bytes = "6.0.0"

# Wallet-only dependencies
anyhow = "1.0.69"
directories = "5.0.0"
env_logger = "0.11.0"
futures = "0.3"
hex = "0.4.3"
sled = "0.34.7"
tokio = "1.25.0"

# Node-only dependencies
substrate-build-script-utils = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }

# Runtime-only dependencies
substrate-wasm-builder = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }

# Substrate primitives and client
sc-basic-authorship = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-chain-spec = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-cli = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sc-client-api = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-aura = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-grandpa = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-consensus-manual-seal = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-executor = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-keystore = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-network = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-network-sync = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-rpc = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-rpc-api = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-service = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sc-sysinfo = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-telemetry = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-tracing = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-transaction-pool = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sc-transaction-pool-api = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sp-api = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-application-crypto = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-block-builder = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-blockchain = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-aura = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-consensus-grandpa = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-debug-derive = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-genesis-builder = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-inherents = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-io = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-keyring = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
sp-keystore = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-session = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-std = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-storage = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-timestamp = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-transaction-pool = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-version = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
substrate-prometheus-endpoint = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }

# Cumulus
cumulus-client-cli = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-client-collator = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-client-consensus-aura = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-client-consensus-common = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-client-consensus-proposer = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-client-parachain-inherent = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-client-service = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-primitives-core = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-primitives-parachain-inherent = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-relay-chain-interface = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-test-client = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
cumulus-test-relay-sproof-builder = { branch = "release-polkadot-v1.10.1", git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-cli = { branch = "release-polkadot-v1.10.1", default-features = false, git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-parachain-primitives = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
polkadot-primitives = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }

# Added while adding Polkadot / Cumulus support
sp-externalities = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-state-machine = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-tracing = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
sp-trie = { branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
trie-db = { version = "0.28.0", default-features = false }

# We need to depend on this explicitly so we can enable the "full-node" feature
# See https://github.com/paritytech/polkadot-sdk/issues/2551 for more details
polkadot-service = { features = [ "full-node" ], branch = "release-polkadot-v1.10.1", default_features = false, git = "https://github.com/paritytech/polkadot-sdk" }
