[package]
description = "Farcaster Atomic Swap protocol support for Tuxedo based chains"
edition = "2021"
name = "farcaster-tuxedo"
version = "0.1.0"

# TODO These were copy pasted. Prune them.
[dependencies]
parity-scale-codec = { features = [ "derive" ], workspace = true }
scale-info = { features = [ "derive" ], workspace = true }
serde = { features = [ "derive" ], workspace = true }
sp-core = { default_features = false, workspace = true }
sp-runtime = { default_features = false, workspace = true }
sp-std = { default_features = false, workspace = true }
tuxedo-core = { default-features = false, path = "../tuxedo-core" }

[features]
default = [ "std" ]
std = [
	"tuxedo-core/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"serde/std",
	"sp-core/std",
	"sp-std/std",
]
