[package]
name = "node-template"
version = "4.0.0-dev"
description = "A fresh Substrate node, ready for hacking."
edition = "2021"
license = "Unlicense"
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }

sc-cli = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-service = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-network = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }

# Local Dependencies
node-template-runtime = { package = "tuxedo-template-runtime", path = "../tuxedo-template-runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", tag = "monthly-2023-07" }

[features]
default = []
